All_Component_DX/force-app/main/default/objects/SM_Service_Board__e/fields/SM_Batch_Delete__c.field-meta.xml
<CustomField>
    <fullName>SM_Batch_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether the payload is for a bulk delete or not.</description>
    <label>Batch Delete</label>
    <type>Checkbox</type>
</CustomField>