All_Component_DX/force-app/main/default/objects/SM_Service_Board__e/fields/SM_Callback__c.field-meta.xml
<CustomField>
    <fullName>SM_Callback__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field if true, indicates that the payload size is more.</description>
    <label>Callback</label>
    <type>Checkbox</type>
</CustomField>