All_Component_DX/force-app/main/default/objects/SM_Service_Board__e/fields/SM_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>SM_Event_Type__c</fullName>
    <description>This indicates the type of event (create, update or delete).</description>
    <label>Event Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>