All_Component_DX/force-app/main/default/objects/SM_Service_Board__e/fields/SM_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Object_Name__c</fullName>
    <description>This has the name of the object for which the payload is being sent.</description>
    <label>Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>